@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Parque {
  -idParque
  -FarmaciaNIF  
  -numeroMaximo
  -tipo
}

class Farmacia {
  -NIF
  -email
  -morada
}

class Utilizador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Scooter {
  -idScooter
  -percentagemBateria
  -pesoScooter
  -pesoMaximo
}

Administrador "1" -- "1" Utilizador: atua como >
Administrador "1" -- "1..*" Scooter: adiciona >
Farmacia "1" -- "1" Parque: tem >
Farmacia "1" -- "1" Administrador: tem >
Parque "1" -- "0..*" Scooter: tem > 

@enduml
